# trading-journal-cld

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  FLEX_QUERY_SETUP.md  IBKR_API_SETUP_GUIDE.md  PLAN.md  POC_README.md  README.md  alembic.ini  analyze_trades.py  check_nvda_executions.py  check_nvda_sql.py  check_trades.py  cleanup_trades.py  clear_database.py  diagnose_polygon_subscription.py  docker-compose.yml  load_sample_data.py  poc3_enhanced.py  poc_grouping_algorithm.ipynb  poc_grouping_algorithm_executed.ipynb  poc_ibkr_connection.py  poc_ibkr_csv_import.py  poc_ibkr_flex_query.py  poc_ibkr_greeks.py  poc_ibkr_test_orders.py  poc_ibkr_test_positions.py  poc_polygon_greeks.py  pyproject.toml  requirements-dev.txt  requirements-poc.txt  requirements.txt  show_database.py  test_ibkr_connection.py  test_new_grouping.py  test_real_data.py  verify_classification.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20251205_1316_change_order_id_and_perm_id_to_bigint.py  20251208_1543_add_open_close_indicator_to_executions.py  20251208_1545_add_trade_id_foreign_key_to_executions.py  20251212_position_ledger_and_roll_linking.py  20251213_2102_add_assignment_tracking_fields.py  20251214_greeks_trade_analytics.py  20251218_1638_make_execution_timestamps_timezone_aware.py  20251218_1647_make_trade_timestamps_timezone_aware.py  20251218_2215_change_execution_quantity_to_decimal_.py  20251219_add_tags_and_trade_tags_tables.py  20260105_2136_add_wash_sale_tracking_fields.py  20260106_2147_increase_greeks_column_precision.py
docker/: Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/contexts/: TimezoneContext.tsx
frontend/lib/: utils.ts
scripts/: backfill_max_profit_risk.py  compare_costs_with_ibkr.py  fetch_all_greeks.py  fix_assignment_cost_basis.py  fix_commission_in_net_amount.py  import_csv_executions.py  normalize_splits.py  reprocess_trades.py  test_bmnr_position_data.py  test_calculations.py  test_fred.py  test_ibkr_market_data.py  test_ibkr_portfolio.py  test_market_data_api.py  test_polygon.py  test_polygon_market_data.py
tests/: __init__.py  conftest.py  test_api.py  test_endpoints.py  test_phase2_features.py  test_services.py
(+104 files in other folders)
